@@ -1,3 +1,7 @@
+2006-02-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* python/convertrules.py (conv): oops. One slash too much.
+
 2006-02-02  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* flower/include/std-vector.hh (slice): Remove.
